Fixes : restart process / random values / getAgentWithRole
- refactoring concurrent tests

Fixes:
- stop animation timer when no display is selected
- make Agent hashcode and equals final: an agent is unique
- randomizing values properly during the beginning of the agent's life
cycle
- getAgentWithRole and send on CGR now process on a random agent